--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Magest1ckkz/magest1ckkz.github.io/refs/heads/main/icon.png"/>
-    <title>Magestick's cool website!</title>
+    <title>Projects - Magestick's cool website!</title>
   </head>
   <body>
     <div class="header">
         <div id="container"></div>
-        <h1>Projects - Magestick's cool website</h1>
+        <h1>Magestick's cool website</h1>
         <p>From Russia with Love - Since 2021</p>
         <div class="links">
             <ul>
@@ -48,4 +49,5 @@
     </footer>
   </body>
   <script src="script.js"></script>
+
 </html>
