--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <footer>
         <center>
           <img class="copy" onclick="copyText()" src="mage-webring.png" width="96px">
-            <a href="https://quirozp.neocities.org/archive.html">
-              <img src="https://quirozp.neocities.org/images/webring-jqa.png" alt="webring_jqa">
+              <a href="https://jquiroz.nekoweb.org">
+                <img src="https://jquiroz.nekoweb.org/web_btn.gif">
             </a>
             <a href="https://dell-optiplex-790.neocities.org">
                 <img src="https://dell-optiplex-790.neocities.org/images/dell-webring.png" width="64px" height="32px" alt="dell's webring">
@@ -51,3 +51,4 @@
   <script src="script.js"></script>
 
 </html>
+
